--- a/templates/default.template
+++ b/templates/default.template
@@ -16,7 +16,7 @@
         <link rel="stylesheet" type="text/css" href="/styles/default.css" media="screen and (min-width: 600px)" />
         <link rel="stylesheet" type="text/css" href="/styles/highlight.css" />
         __:LOCAL_CSS:__
-        <link rel="Shortcut Icon" type="image/x-icon" href="/favicon.ico" />
+        <link rel="icon" type="image/png" href="/favicon.png" />
     </head>
     
     <body>
